--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    <section id="service">
    	<div id="main_service">
    		<h3>SERVICES WE PROVIDE</h3>
-   		<p></p>
+   		<div id="bar"></div>
    		<p>The quick brown fox jumps over the lazy dogs.the quick brown fox jumps over the lazy dogs</p>
    		<div id="service_content">
    			<div id="item">
@@ -68,6 +68,72 @@
    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
    				tempor incididunt ut labore et dolore magna aliqua. atat non
    				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   			</div>
+   		</div>
+   	</div>
+   </section>
+
+   <section id="team">
+   	<div id="main_team">
+   		<h3>MEET OUR BEAUTIFUL TEAM</h3>
+   		<div id="bar"></div>
+   		<p>The quick brown fox jumps over the lazy dogs.the quick brown fox jumps over the lazy dogs</p>
+   		<div id="team_content">
+   			<div id="item">
+   				<img src="img/1.jpg">
+   				<h4>ANNE HATHAWAY</h4>
+   				<h5>CEO/Marketing Guru</h5>
+   				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   				tempor incididunt ut labore et dolore magna aliqua. atat non
+   				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   				<div id="icon">
+   					<i class="fab fa-facebook"></i>
+   					<i class="fab fa-twitter"></i>
+   					<i class="fab fa-linkedin-in"></i>
+   					<i class="fas fa-envelope"></i>
+   				</div>
+   			</div>
+   			<div id="item">
+   				<img src="img/1.jpg">
+   				<h4>ANNE HATHAWAY</h4>
+   				<h5>CEO/Marketing Guru</h5>
+   				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   				tempor incididunt ut labore et dolore magna aliqua. atat non
+   				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   				<div id="icon">
+   					<i class="fab fa-facebook"></i>
+   					<i class="fab fa-twitter"></i>
+   					<i class="fab fa-linkedin-in"></i>
+   					<i class="fas fa-envelope"></i>
+   				</div>
+   			</div>
+   			<div id="item">
+   				<img src="img/1.jpg">
+   				<h4>ANNE HATHAWAY</h4>
+   				<h5>CEO/Marketing Guru</h5>
+   				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   				tempor incididunt ut labore et dolore magna aliqua. atat non
+   				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   				<div id="icon">
+   					<i class="fab fa-facebook"></i>
+   					<i class="fab fa-twitter"></i>
+   					<i class="fab fa-linkedin-in"></i>
+   					<i class="fas fa-envelope"></i>
+   				</div>
+   			</div>
+   			<div id="item">
+   				<img src="img/1.jpg">
+   				<h4>ANNE HATHAWAY</h4>
+   				<h5>CEO/Marketing Guru</h5>
+   				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   				tempor incididunt ut labore et dolore magna aliqua. atat non
+   				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   				<div id="icon">
+   					<i class="fab fa-facebook"></i>
+   					<i class="fab fa-twitter"></i>
+   					<i class="fab fa-linkedin-in"></i>
+   					<i class="fas fa-envelope"></i>
+   				</div>
    			</div>
    		</div>
    	</div>
