--- a/index.html
+++ b/index.html
@@ -138,6 +138,53 @@
    		</div>
    	</div>
    </section>
+
+   <section id="skills">
+   		<div id="skills_content">
+   			<h3>WE GOT SKILLS</h3>
+   			<div id="mar"></div>
+   			<p>The quick brown fox jumps over the lazy dogs. the quick brown fox jumps over the lazy dogs</p>
+   			<div id="progress">
+   				<div id="progress_item_1">
+   					<svg class="radial-progress" data-percentage="90" viewBox="0 0 80 80">
+					  <circle class="incomplete" cx="40" cy="40" r="35"></circle>
+					  <circle class="complete" cx="40" cy="40" r="35" style="stroke-dashoffset: 39.58406743523136;"></circle>
+					  <text class="percentage" x="50%" y="57%" transform="matrix(0, 1, -1, 0, 80, 0)">90%</text>
+					</svg>
+					<p>Web Development</p>
+   				</div>
+				<div id="progress_item_2">
+					<svg class="radial-progress" data-percentage="75" viewBox="0 0 80 80">
+					  <circle class="incomplete" cx="40" cy="40" r="35"></circle>
+					  <circle class="complete" cx="40" cy="40" r="35" style="stroke-dashoffset: 39.58406743523136;"></circle>
+					  <text class="percentage" x="50%" y="57%" transform="matrix(0, 1, -1, 0, 80, 0)">75%</text>
+					</svg>
+					<p>Graphics Design</p>
+				</div>
+				<div id="progress_item_3">
+					<svg class="radial-progress" data-percentage="75" viewBox="0 0 80 80">
+					  <circle class="incomplete" cx="40" cy="40" r="35"></circle>
+					  <circle class="complete" cx="40" cy="40" r="35" style="stroke-dashoffset: 39.58406743523136;"></circle>
+					  <text class="percentage" x="50%" y="57%" transform="matrix(0, 1, -1, 0, 80, 0)">75%</text>
+					</svg>
+					<p>Graphics Design</p>
+				</div>
+				<div id="progress_item_4">
+					<svg class="radial-progress" data-percentage="75" viewBox="0 0 80 80">
+					  <circle class="incomplete" cx="40" cy="40" r="35"></circle>
+					  <circle class="complete" cx="40" cy="40" r="35" style="stroke-dashoffset: 39.58406743523136;"></circle>
+					  <text class="percentage" x="50%" y="57%" transform="matrix(0, 1, -1, 0, 80, 0)">75%</text>
+					</svg>
+					<p>Graphics Design</p>
+				</div>
+   			</div>
+   		</div>
+   </section>
+   <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
+        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" 
+        crossorigin="anonymous">
+</script> 
+<script type="text/javascript" src="js/progress_bar.js"></script>
    <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
