--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 
    <section id="opinions">
       <div id="opinions_content">
-         <h3>WHAT PEOPLE SAY ABOUT US</h3>
-         <div></div>
-         <p>Our clients love us</p>
+         <h3 id="txt">WHAT PEOPLE SAY ABOUT US</h3>
+         <div id="bar"></div>
+         <p id="qty">Our clients love us</p>
          <div id="opinions_item">
             <div id="opionions_item_2">
                <div>
@@ -245,6 +245,77 @@
          </div>
       </div>
    </section>
+
+   <section id="protfolios">
+      <div id="profolios_content">
+         <h3 id="txt">OUR PORTFOLIO</h3>
+         <div id="bar"></div>
+         <p>The quick brown fox jumps over the lazy dogs. The quick brown fox jumps over the lazy dogs</p>
+         <div id="main_content">
+            <div id="portfolioes_1">
+               <img src="img/portfolio1.png">
+               <h4>ISOMETRIC PERSPECTIVE MOCK-UP</h4>
+               <h3>Mobile App</h3>
+            </div>
+            <div id="portfolioes_1">
+               <img src="img/portfolio1.png">
+               <h4>ISOMETRIC PERSPECTIVE MOCK-UP</h4>
+               <h3>Mobile App</h3>
+            </div>
+            <div id="portfolioes_1">
+               <img src="img/portfolio1.png">
+               <h4>ISOMETRIC PERSPECTIVE MOCK-UP</h4>
+               <h3>Mobile App</h3>
+            </div>
+            <div id="portfolioes_1">
+               <img src="img/portfolio1.png">
+               <h4>ISOMETRIC PERSPECTIVE MOCK-UP</h4>
+               <h3>Mobile App</h3>
+            </div>
+            <div id="portfolioes_1">
+               <img src="img/portfolio1.png">
+               <h4>ISOMETRIC PERSPECTIVE MOCK-UP</h4>
+               <h3>Mobile App</h3>
+            </div>
+            <div id="portfolioes_1">
+               <img src="img/portfolio1.png">
+               <h4>ISOMETRIC PERSPECTIVE MOCK-UP</h4>
+               <h3>Mobile App</h3>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <section id="touch">
+      <div id="main_touch">
+         <h3>GET IN TOUCH</h3>
+         <div id="bar"></div>
+         <p>The quick brown fox jumps over the lazy dogs.the quick brown fox jumps the lay doogs</p>
+         <div id="form_div">
+            <form id="message">
+               <div>
+                  <input id="inp" type="" name="" placeholder="Your Name*">
+                  <input id="inp" type="" name="" placeholder="Your Email">
+               </div>
+               <textarea placeholder="Your Message"></textarea>
+               <input id="btn" type="button" value="SEND MESSAGE">
+            </form>
+         </div>
+      </div>
+   </section>
+
+   <footer id="footer">
+      <div id="main_footer">
+         <div id="footer_content">
+            <a href="">Facebook</a>
+            <a href="">Facebook</a>
+            <a href="">Facebook</a>
+            <a href="">Facebook</a>
+            <a href="">Facebook</a>
+            <a href="">Facebook</a>
+         </div>
+      </div>
+   </footer>
    <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
         integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" 
         crossorigin="anonymous">
