--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
       <div id="main_footer">
          <div id="footer_content">
             <a href="">Facebook</a>
-            <a href="">Facebook</a>
-            <a href="">Facebook</a>
-            <a href="">Facebook</a>
-            <a href="">Facebook</a>
-            <a href="">Facebook</a>
+            <a href="">Twitter</a>
+            <a href="">LinkedIn</a>
+            <a href="">Github</a>
+            <a href="">Instagram</a>
+            <a href="">Youtub</a>
          </div>
       </div>
    </footer>
